mengubah warna pada website

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .jumbotron {
   padding-top: 6rem;
-  background-color: #e2fff0;
+  background-color: #f1f1eb;
 }
 
 #projects {
-  background-color: #e2fff0;
+  background-color: #f2f1eb;
 }
 
 section {
